<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resendtp"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourphonenumber" 
        android:layout_margin="5dp"
        />

    <EditText
        android:id="@+id/resendEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5px"
        android:inputType="phone" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrationTip" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom" >

        <Button
            android:id="@+id/resendCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.69"
            android:layout_gravity="bottom"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/processResend"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/resend" />

    </LinearLayout>

</LinearLayout>