<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactDetails"
        android:layout_marginBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone" 
        android:layout_margin="5dp"
        />

    <EditText
        android:id="@+id/contactPhoneEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:inputType="phone" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:gravity="center"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name" />
    
    <EditText
        android:id="@+id/contactNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:inputType="text" >
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom" >

        <Button
            android:id="@+id/cancel_contact_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.69"
            android:text="@string/cancel"
            android:layout_gravity="bottom" />

        <Button
            android:id="@+id/process_contact"
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:text="@string/ok" 
            android:layout_gravity="bottom"/>
    </LinearLayout>

</LinearLayout>