<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/calllog"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/recentcalls" />

     <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

     <ListView
            android:id="@+id/callsList"
            android:divider="@color/gray" 
            android:dividerHeight="1dp"      
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
     </ListView>
         
    <TextView
			    android:id="@+id/empty"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:layout_gravity="center"
			    android:gravity="center"
			    android:padding="10dp"
			    android:text="@string/emptylist" />
    
     </FrameLayout>
    
</LinearLayout>