<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/menu_price"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/country" />

	<LinearLayout
	    android:id="@+id/linearLayout2"
	    android:layout_width="match_parent"
	            android:layout_margin="5dp"
	    
	    android:layout_height="wrap_content" >

	    <AutoCompleteTextView
	        android:id="@+id/countryEdit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:layout_weight="0.59" />

	    <Button
	        android:id="@+id/show"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:layout_marginLeft="5dp"
	        android:text="@string/show" />

	</LinearLayout>

     <ListView
            android:id="@+id/countriesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:divider="@color/gray"
            android:dividerHeight="1px" />

</LinearLayout>