<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/phoneLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/phone_background"
        android:orientation="vertical" >

        <fragment
            android:id="@+id/fragment2"
            android:name="com.phonty.improved.TabsFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:id="@+id/balanceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textColor="@color/almostBlack"
                android:visibility="gone" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="0.0"
                android:textColor="@color/almostBlack" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <EditText
                android:id="@+id/phone"
                android:layout_width="212dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="phone" />

            <ImageButton
                android:id="@+id/callButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:src="@drawable/call"
                android:text="@string/call" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/direction_cost_background"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:id="@+id/directionCostLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/blank"
                android:textColor="@color/white" />

            <ProgressBar
                android:id="@+id/directionProgress"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="7dp" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone" >

        <ListView
            android:id="@+id/contactsList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:divider="@color/gray"
            android:dividerHeight="1dp" >
        </ListView>

        <TextView
            android:id="@+id/empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/tip" />
    </FrameLayout>

</LinearLayout>